src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_array_iteration.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: serialize_spans(&spans)
---
- content: ".items"
  fg: "rgb(236,236,244)"
- content: "["
  fg: "rgb(198,120,221)"
- content: "]"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "|"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: select
  fg: "rgb(0,217,255)"
- content: (
  fg: "rgb(198,120,221)"
- content: ".active"
  fg: "rgb(236,236,244)"
- content: )
  fg: "rgb(198,120,221)"
