src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_common_functions.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: results
---
- - map
  - - content: map
      fg: "rgb(0,217,255)"
- - select
  - - content: select
      fg: "rgb(0,217,255)"
- - sort
  - - content: sort
      fg: "rgb(0,217,255)"
- - keys
  - - content: keys
      fg: "rgb(0,217,255)"
- - values
  - - content: values
      fg: "rgb(0,217,255)"
- - length
  - - content: length
      fg: "rgb(0,217,255)"
- - type
  - - content: type
      fg: "rgb(0,217,255)"
- - add
  - - content: add
      fg: "rgb(0,217,255)"
- - first
  - - content: first
      fg: "rgb(0,217,255)"
- - last
  - - content: last
      fg: "rgb(0,217,255)"
- - has
  - - content: has
      fg: "rgb(0,217,255)"
- - contains
  - - content: contains
      fg: "rgb(0,217,255)"
- - split
  - - content: split
      fg: "rgb(0,217,255)"
- - join
  - - content: join
      fg: "rgb(0,217,255)"
