src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_if_then_else.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: serialize_spans(&spans)
---
- content: if
  fg: "rgb(255,107,157)"
- content: " "
  fg: "rgb(236,236,244)"
- content: ".value"
  fg: "rgb(236,236,244)"
- content: " "
  fg: "rgb(236,236,244)"
- content: ">"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "10"
  fg: "rgb(189,147,249)"
- content: " "
  fg: "rgb(236,236,244)"
- content: then
  fg: "rgb(255,107,157)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "\"high\""
  fg: "rgb(107,203,119)"
- content: " "
  fg: "rgb(236,236,244)"
- content: else
  fg: "rgb(255,107,157)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "\"low\""
  fg: "rgb(107,203,119)"
- content: " "
  fg: "rgb(236,236,244)"
- content: end
  fg: "rgb(255,107,157)"
