src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_keywords.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: results
---
- - if
  - - content: if
      fg: "rgb(255,107,157)"
- - then
  - - content: then
      fg: "rgb(255,107,157)"
- - else
  - - content: else
      fg: "rgb(255,107,157)"
- - elif
  - - content: elif
      fg: "rgb(255,107,157)"
- - end
  - - content: end
      fg: "rgb(255,107,157)"
- - and
  - - content: and
      fg: "rgb(255,107,157)"
- - or
  - - content: or
      fg: "rgb(255,107,157)"
- - not
  - - content: not
      fg: "rgb(255,107,157)"
- - as
  - - content: as
      fg: "rgb(255,107,157)"
- - def
  - - content: def
      fg: "rgb(255,107,157)"
- - reduce
  - - content: reduce
      fg: "rgb(255,107,157)"
- - foreach
  - - content: foreach
      fg: "rgb(255,107,157)"
- - try
  - - content: try
      fg: "rgb(255,107,157)"
- - catch
  - - content: catch
      fg: "rgb(255,107,157)"
- - empty
  - - content: empty
      fg: "rgb(255,107,157)"
- - "null"
  - - content: "null"
      fg: "rgb(255,107,157)"
- - "true"
  - - content: "true"
      fg: "rgb(255,107,157)"
- - "false"
  - - content: "false"
      fg: "rgb(255,107,157)"
