src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_number_literals.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: results
---
- - "0"
  - - content: "0"
      fg: "rgb(189,147,249)"
- - "42"
  - - content: "42"
      fg: "rgb(189,147,249)"
- - "-123"
  - - content: "-123"
      fg: "rgb(189,147,249)"
- - "3.14"
  - - content: "3.14"
      fg: "rgb(189,147,249)"
- - "-0.5"
  - - content: "-0.5"
      fg: "rgb(189,147,249)"
