src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_object_construction.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: serialize_spans(&spans)
---
- content: "{"
  fg: "rgb(198,120,221)"
- content: name
  fg: "rgb(0,217,255)"
- content: ":"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: ".name"
  fg: "rgb(236,236,244)"
- content: ","
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: age
  fg: "rgb(0,217,255)"
- content: ":"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: ".age"
  fg: "rgb(236,236,244)"
- content: ","
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: active
  fg: "rgb(0,217,255)"
- content: ":"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "true"
  fg: "rgb(255,107,157)"
- content: "}"
  fg: "rgb(198,120,221)"
