src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_operators.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: results
---
- - "|"
  - - content: "|"
      fg: "rgb(198,120,221)"
- - "=="
  - - content: "=="
      fg: "rgb(198,120,221)"
- - "!="
  - - content: "!="
      fg: "rgb(198,120,221)"
- - "<="
  - - content: "<="
      fg: "rgb(198,120,221)"
- - ">="
  - - content: ">="
      fg: "rgb(198,120,221)"
- - //
  - - content: //
      fg: "rgb(198,120,221)"
- - +
  - - content: +
      fg: "rgb(198,120,221)"
- - "-"
  - - content: "-"
      fg: "rgb(198,120,221)"
- - "*"
  - - content: "*"
      fg: "rgb(198,120,221)"
- - /
  - - content: /
      fg: "rgb(198,120,221)"
- - "%"
  - - content: "%"
      fg: "rgb(198,120,221)"
- - (
  - - content: (
      fg: "rgb(198,120,221)"
- - )
  - - content: )
      fg: "rgb(198,120,221)"
- - "["
  - - content: "["
      fg: "rgb(198,120,221)"
- - "]"
  - - content: "]"
      fg: "rgb(198,120,221)"
- - "{"
  - - content: "{"
      fg: "rgb(198,120,221)"
- - "}"
  - - content: "}"
      fg: "rgb(198,120,221)"
- - ","
  - - content: ","
      fg: "rgb(198,120,221)"
- - ;
  - - content: ;
      fg: "rgb(198,120,221)"
- - ":"
  - - content: ":"
      fg: "rgb(198,120,221)"
- - "?"
  - - content: "?"
      fg: "rgb(198,120,221)"
