src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_reduce.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: serialize_spans(&spans)
---
- content: reduce
  fg: "rgb(255,107,157)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "."
  fg: "rgb(236,236,244)"
- content: "["
  fg: "rgb(198,120,221)"
- content: "]"
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: as
  fg: "rgb(255,107,157)"
- content: " "
  fg: "rgb(236,236,244)"
- content: $x
  fg: "rgb(255,184,108)"
- content: " "
  fg: "rgb(236,236,244)"
- content: (
  fg: "rgb(198,120,221)"
- content: "0"
  fg: "rgb(189,147,249)"
- content: ;
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: "."
  fg: "rgb(236,236,244)"
- content: " "
  fg: "rgb(236,236,244)"
- content: +
  fg: "rgb(198,120,221)"
- content: " "
  fg: "rgb(236,236,244)"
- content: $x
  fg: "rgb(255,184,108)"
- content: )
  fg: "rgb(198,120,221)"
